2007-12-27  Raphael Hertzog  <hertzog@debian.org>

	* configure.ac: Bump version to 1.14.15~.

2007-12-27  Raphael Hertzog  <hertzog@debian.org>

	* configure.ac: Release 1.14.14.

2007-12-27  Raphael Hertzog  <hertzog@debian.org>

	* debian/control: Bump dpkg dependency to >= 1.14.13 in dpkg-dev
	as dpkg-source needs the latest Dpkg.pm.
	* debian/control: Add libio-string-perl to Build-Depends as it's
	needed for a non-regression test (200_Dpkg_Shlibs.t).
	* debian/control: Fix priority of dselect to match the priority
	set by ftpmasters.

2007-12-27  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.14.14~.

2007-12-27  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.14.13.

2007-12-27  Flavio Stanchina  <flavio@stanchina.net>

	* scripts/dpkg-divert.pl (checkrename): Do not ignore ENOENT for
	destination.

2007-12-27  Daniel Leidert  <daniel.leidert@wgdd.de>
            Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl: Refactor duplicate code into ...
	(checked_alternative): ... here. New function.
	(set_links): Call it.

2007-12-27  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl (gl): Use defined instead of length.

2007-12-27  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl (set_links): New function.
	(config_alternatives): Use set_links instead of duped code.
	(set_alternatives): Likewise.

2007-12-27  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl: Refactor all code to use
	checked_mv instead of duped code.

2007-12-27  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl: Refactor all code to use
	checked_symlink instead of duped code.

2007-12-27  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl (checked_rm): New function. Refactor
	all code to use it instead of duped code.

2007-12-26  Raphael Hertzog  <hertzog@debian.org>
