@@ -1,6 +1,8 @@
 dpkg (1.14.15) UNRELEASED; urgency=low
 
-  *
+  [ Raphael Hertzog ]
+  * Make sure {dpkg-dev,dselect}.preinst are included in the source tarball.
+    Closes: #452730
 
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson).
