@@ -1,5 +1,11 @@
 2007-12-27  Raphael Hertzog  <hertzog@debian.org>
 
+	* Makefile.am: Add some missing files in EXTRA_DIST. And add a
+	dist-hook rule to check that all files contained in the git
+	repository (except .gitignore) are included in the dist tarball.
+
+2007-12-27  Raphael Hertzog  <hertzog@debian.org>
+
 	* configure.ac: Bump version to 1.14.15~.
 
 2007-12-27  Raphael Hertzog  <hertzog@debian.org>
